# ChronoTimer

./: .gitignore  CMakeLists.txt  README.md
include/: chronotimer.h
source/: chronotimer.cpp
